Fix surefire java version to be built on 1.8